[gd_scene load_steps=6 format=3 uid="uid://bkg0fb5j0mr1"]

[ext_resource type="Script" path="res://Scripts/Rooms/Weapon_Room.gd" id="1_sd7ms"]
[ext_resource type="PackedScene" uid="uid://d2uo0ynslvkp6" path="res://Scenes/Tilemaps/tile_map.tscn" id="2_fbekd"]
[ext_resource type="PackedScene" uid="uid://bc884qfo76yo4" path="res://Scenes/Props/door.tscn" id="3_yuriw"]
[ext_resource type="PackedScene" uid="uid://b324yms17rke5" path="res://Scenes/Props/Traps/spikes_trap.tscn" id="4_kiynt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6jely"]
size = Vector2(38, 42)

[node name="Weapon_Room_0" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_sd7ms")

[node name="TileMap" parent="." instance=ExtResource("2_fbekd")]
layer_0/tile_data = PackedInt32Array(65537, 524288, 4, 131073, 196608, 1, 196609, 196608, 1, 262145, 196608, 1, 327681, 196608, 1, 393217, 196608, 1, 65538, 524288, 4, 131074, 196608, 1, 196610, 196608, 1, 65539, 524288, 4, 131075, 196608, 1, 196611, 196608, 1, 458755, 196608, 1, 65540, 524288, 4, 131076, 196608, 1, 196612, 0, 4, 262148, 0, 4, 327684, 524288, 5, 393220, 196608, 1, 458756, 0, 4, 5, 131072, 1, 65541, 131072, 1, 131077, 196608, 1, 196613, 0, 4, 262149, 0, 4, 327685, 393216, 5, 393221, 196608, 1, 6, 131072, 1, 65542, 131072, 1, 131078, 196608, 1, 196614, 196608, 1, 262150, 196608, 1, 327686, 196608, 1, 393222, 196608, 1, 65543, 458752, 5, 131079, 196608, 1, 196615, 196608, 1, 262151, 196608, 1, 65544, 524288, 4, 131080, 196608, 1, 196616, 0, 4, 262152, 0, 4, 65545, 524288, 4, 131081, 196608, 1, 196617, 0, 4, 262153, 0, 4, 65546, 524288, 4, 131082, 196608, 1, 196618, 0, 4, 262154, 0, 4, 327690, 458752, 4, 393226, 262144, 2, 458753, 196608, 1, 524289, 196608, 1, 589825, 196608, 1, 655361, 196608, 1, 720897, 196608, 1, 458754, 196608, 1, 524290, 196608, 1, 589826, 196608, 1, 655362, 196608, 1, 720898, 196608, 1, 524291, 196608, 1, 589827, 196608, 1, 655363, 196608, 1, 720899, 196608, 1, 524292, 0, 4, 589828, 458752, 4, 655364, 196608, 1, 720900, 196608, 1, 458757, 0, 4, 524293, 0, 4, 589829, 458752, 4, 655365, 196608, 1, 720901, 196608, 1, 458758, 196608, 1, 524294, 131072, 1, 655366, 196608, 1, 720902, 196608, 1, 524295, 196608, 2, 655367, 196608, 1, 720903, 196608, 1, 524296, 262144, 3, 655368, 196608, 1, 720904, 196608, 1, 524297, 131072, 3, 655369, 196608, 1, 720905, 196608, 1, 786441, 196608, 1, 458762, 327680, 3, 524298, 262144, 3, 655370, 196608, 1, 720906, 196608, 1, 786442, 196608, 1, 65547, 524288, 4, 131083, 196608, 1, 196619, 196608, 1, 262155, 196608, 1, 327691, 196608, 1, 393227, 131072, 2, 458763, 196608, 3, 524299, 262144, 2, 655371, 196608, 1, 720907, 196608, 1, 65548, 524288, 4, 131084, 196608, 1, 196620, 196608, 1, 262156, 131072, 1, 327692, 196608, 1, 393228, 196608, 1, 458764, 196608, 1, 524300, 196608, 1, 655372, 196608, 1, 720908, 196608, 1, 65549, 524288, 4, 131085, 196608, 1, 196621, 0, 4, 262157, 0, 4, 327693, 458752, 4, 458765, 0, 4, 524301, 0, 4, 589837, 524288, 5, 655373, 196608, 1, 720909, 196608, 1, 65550, 524288, 4, 131086, 196608, 1, 327694, 458752, 5, 458766, 0, 4, 524302, 0, 4, 589838, 458752, 4, 655374, 196608, 1, 720910, 196608, 1, 65551, 524288, 4, 131087, 196608, 1, 327695, 196608, 1, 393231, 196608, 1, 458767, 196608, 1, 524303, 196608, 1, 589839, 196608, 1, 655375, 196608, 1, 720911, 196608, 1, 65552, 524288, 4, 131088, 196608, 1, 196624, 196608, 1, 262160, 196608, 1, 327696, 196608, 1, 393232, 196608, 1, 458768, 196608, 1, 524304, 196608, 1, 589840, 196608, 1, 655376, 196608, 1, 720912, 196608, 1, 262146, 196608, 1, 262147, 196608, 1, 327683, 196608, 1, 393223, 196608, 1, 393224, 131072, 3, 393225, 327680, 2, 458761, 327680, 3, 327688, 458752, 4, 327689, 524288, 5, 327687, 196608, 1, 458759, 131072, 3, 458760, 327680, 2, 327682, 196608, 1, 393218, 196608, 1, 393219, 196608, 1, 196622, 0, 4, 262158, 0, 4, 196623, 196608, 1, 262159, 196608, 1)
layer_1/tile_data = PackedInt32Array(327693, 262144, 0, 327685, 262144, 0, 589829, 262144, 0, 589837, 262144, 0, 589828, 196608, 0, 327689, 262144, 1)

[node name="TileMap2" parent="." instance=ExtResource("2_fbekd")]
z_index = 2
layer_0/tile_data = PackedInt32Array(393216, 262144, 5, 65536, 262144, 5, 131072, 262144, 5, 196608, 262144, 5, 262144, 262144, 5, 327680, 262144, 5, 458752, 262144, 5, 524288, 262144, 5, 589824, 262144, 5, 655360, 262144, 5, 720896, 262144, 6, 720897, 131072, 6, 720898, 131072, 6, 720899, 131072, 6, 720900, 131072, 6, 720901, 131072, 6, 720902, 131072, 6, 720903, 131072, 6, 720904, 327680, 6, 786440, 262144, 5, 720907, 65536, 6, 786443, 196608, 5, 720908, 131072, 6, 720909, 131072, 6, 720910, 131072, 6, 720911, 131072, 6, 720912, 131072, 6, 65553, 196608, 5, 131089, 196608, 5, 196625, 196608, 5, 262161, 196608, 5, 327697, 196608, 5, 393233, 196608, 5, 458769, 196608, 5, 524305, 196608, 5, 589841, 196608, 5, 655377, 196608, 5, 720913, 196608, 6, 1, 131072, 7, 2, 131072, 7, 3, 131072, 7, 4, 327680, 7, 7, 65536, 7, 8, 131072, 7, 9, 131072, 7, 10, 131072, 7, 11, 131072, 7, 12, 131072, 7, 13, 131072, 7, 14, 131072, 7, 15, 131072, 7, 16, 131072, 7, 17, 196608, 4, 0, 262144, 4, 5, 458752, 6, 6, 524288, 6, 720906, 524288, 6, 720905, 458752, 6, 524302, 327680, 7, 262158, 327680, 7, 262149, 327680, 7, 524293, 327680, 7, 524292, 65536, 7, 262148, 65536, 7, 262157, 65536, 7, 524301, 65536, 7, 393220, 65536, 6, 393221, 327680, 6, 131077, 327680, 6, 131086, 327680, 6, 393230, 327680, 6, 393229, 65536, 6, 131076, 65536, 6, 458756, 196608, 5, 196612, 196608, 5, 196621, 196608, 5, 458765, 196608, 5, 458766, 262144, 5, 196622, 262144, 5, 196613, 262144, 5, 458757, 262144, 5, 131085, 65536, 6, 262154, 327680, 7, 262152, 65536, 7, 196616, 196608, 5, 196618, 262144, 5, 131081, 131072, 6, 262153, 131072, 7, 131080, 65536, 6, 131082, 327680, 6, 262155, 458752, 6, 262156, 524288, 6, 262151, 524288, 6, 262150, 458752, 6)

[node name="Entrance" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="Entrance"]
position = Vector2(152, 184)

[node name="Marker2D2" type="Marker2D" parent="Entrance"]
position = Vector2(168, 184)

[node name="Doors" type="Node2D" parent="."]

[node name="Door" parent="Doors" instance=ExtResource("3_yuriw")]
position = Vector2(96, 16)

[node name="Door2" parent="Doors" instance=ExtResource("3_yuriw")]
position = Vector2(160, 192)

[node name="EnemyPositions" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="EnemyPositions"]
position = Vector2(24, 104)

[node name="Marker2D2" type="Marker2D" parent="EnemyPositions"]
position = Vector2(193, 39)

[node name="Marker2D3" type="Marker2D" parent="EnemyPositions"]
position = Vector2(111, 40)

[node name="PlayerDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
position = Vector2(152, 120)
shape = SubResource("RectangleShape2D_6jely")

[node name="Traps" type="Node2D" parent="."]

[node name="Spikes_Trap" parent="Traps" instance=ExtResource("4_kiynt")]
position = Vector2(120, 152)

[node name="Spikes_Trap2" parent="Traps" instance=ExtResource("4_kiynt")]
position = Vector2(104, 152)

[node name="Spikes_Trap3" parent="Traps" instance=ExtResource("4_kiynt")]
position = Vector2(136, 152)

[node name="Spikes_Trap4" parent="Traps" instance=ExtResource("4_kiynt")]
position = Vector2(152, 152)

[node name="Spikes_Trap5" parent="Traps" instance=ExtResource("4_kiynt")]
position = Vector2(168, 152)

[node name="Spikes_Trap6" parent="Traps" instance=ExtResource("4_kiynt")]
position = Vector2(184, 152)

[node name="Spikes_Trap7" parent="Traps" instance=ExtResource("4_kiynt")]
position = Vector2(200, 152)

[node name="Spikes_Trap8" parent="Traps" instance=ExtResource("4_kiynt")]
position = Vector2(216, 104)

[node name="Spikes_Trap9" parent="Traps" instance=ExtResource("4_kiynt")]
position = Vector2(232, 104)

[node name="WeaponPositions" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="WeaponPositions"]
position = Vector2(152, 120)

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_player_detector_body_entered"]
